--- a/src/app/Components/home/home.component.html
+++ b/src/app/Components/home/home.component.html
@@ -6,4 +6,5 @@
 <div class="orderChart">
     <h3>Data Collection</h3>
     <canvas id="canvas2"></canvas>
+    <div><button (click)="resetZoom()">Reset zoom</button></div>
 </div>
